APAGNANGAGEParser.py
# Generated from APAGNANGAGE.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class APAGNANGAGEParser ( Parser ):

    grammarFileName = "APAGNANGAGE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'POV'", "'DANS'", 
                     "<INVALID>", "'QUOI'", "'FEUR'", "'FAIT'", "'BELECK'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "'OUH'", "'FF'", "'GENRE'" ]

    symbolicNames = [ "<INVALID>", "ID", "INT", "PRINT", "ASSIGN", "FUNCTION_DEF", 
                      "FUNCTION_CALL", "RETURN", "BLOCK_START", "BLOCK_END", 
                      "EQUALS", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "LOOP", 
                      "LOOP_COUNTER", "BREAK", "IF", "STRING_ASSIGN", "STRING_LINE", 
                      "COMMENT", "WS_" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_expression_int = 3
    RULE_operator = 4
    RULE_expression = 5
    RULE_function_call = 6
    RULE_print = 7
    RULE_print_assign_string = 8
    RULE_loop_counter = 9
    RULE_loop = 10
    RULE_logic = 11
    RULE_if = 12
    RULE_block = 13
    RULE_increment = 14
    RULE_function_def = 15
    RULE_return = 16

    ruleNames =  [ "program", "statement", "assignment", "expression_int", 
                   "operator", "expression", "function_call", "print", "print_assign_string", 
                   "loop_counter", "loop", "logic", "if", "block", "increment", 
                   "function_def", "return" ]

    EOF = Token.EOF
    ID=1
    INT=2
    PRINT=3
    ASSIGN=4
    FUNCTION_DEF=5
    FUNCTION_CALL=6
    RETURN=7
    BLOCK_START=8
    BLOCK_END=9
    EQUALS=10
    PLUS=11
    MINUS=12
    MULTIPLY=13
    DIVIDE=14
    LOOP=15
    LOOP_COUNTER=16
    BREAK=17
    IF=18
    STRING_ASSIGN=19
    STRING_LINE=20
    COMMENT=21
    WS_=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(APAGNANGAGEParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.StatementContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.StatementContext,i)


        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = APAGNANGAGEParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 523502) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(APAGNANGAGEParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.AssignmentContext,0)


        def function_call(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.Function_callContext,0)


        def function_def(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.Function_defContext,0)


        def print_(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.PrintContext,0)


        def print_assign_string(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.Print_assign_stringContext,0)


        def loop(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.LoopContext,0)


        def if_(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.IfContext,0)


        def BREAK(self):
            return self.getToken(APAGNANGAGEParser.BREAK, 0)

        def return_(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.ReturnContext,0)


        def increment(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.IncrementContext,0)


        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = APAGNANGAGEParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.function_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.function_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.print_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.print_assign_string()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.loop()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.if_()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 49
                self.match(APAGNANGAGEParser.BREAK)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 50
                self.return_()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 51
                self.increment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.ExpressionContext,0)


        def ASSIGN(self):
            return self.getToken(APAGNANGAGEParser.ASSIGN, 0)

        def ID(self):
            return self.getToken(APAGNANGAGEParser.ID, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = APAGNANGAGEParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.expression()
            self.state = 55
            self.match(APAGNANGAGEParser.ASSIGN)
            self.state = 56
            self.match(APAGNANGAGEParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(APAGNANGAGEParser.INT, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_expression_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_int" ):
                listener.enterExpression_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_int" ):
                listener.exitExpression_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_int" ):
                return visitor.visitExpression_int(self)
            else:
                return visitor.visitChildren(self)




    def expression_int(self):

        localctx = APAGNANGAGEParser.Expression_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(APAGNANGAGEParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(APAGNANGAGEParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(APAGNANGAGEParser.MINUS, 0)

        def MULTIPLY(self):
            return self.getToken(APAGNANGAGEParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(APAGNANGAGEParser.DIVIDE, 0)

        def EQUALS(self):
            return self.getToken(APAGNANGAGEParser.EQUALS, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = APAGNANGAGEParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.OperatorContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.OperatorContext,i)


        def function_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.Function_callContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.Function_callContext,i)


        def expression_int(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.Expression_intContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.Expression_intContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(APAGNANGAGEParser.ID)
            else:
                return self.getToken(APAGNANGAGEParser.ID, i)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = APAGNANGAGEParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 66
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [10, 11, 12, 13, 14]:
                        self.state = 62
                        self.operator()
                        pass
                    elif token in [6]:
                        self.state = 63
                        self.function_call()
                        pass
                    elif token in [2]:
                        self.state = 64
                        self.expression_int()
                        pass
                    elif token in [1]:
                        self.state = 65
                        self.match(APAGNANGAGEParser.ID)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 68 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_CALL(self):
            return self.getToken(APAGNANGAGEParser.FUNCTION_CALL, 0)

        def ID(self):
            return self.getToken(APAGNANGAGEParser.ID, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = APAGNANGAGEParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(APAGNANGAGEParser.FUNCTION_CALL)
            self.state = 71
            self.match(APAGNANGAGEParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(APAGNANGAGEParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.ExpressionContext,0)


        def STRING_LINE(self):
            return self.getToken(APAGNANGAGEParser.STRING_LINE, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = APAGNANGAGEParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(APAGNANGAGEParser.PRINT)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 6, 10, 11, 12, 13, 14]:
                self.state = 74
                self.expression()
                pass
            elif token in [20]:
                self.state = 75
                self.match(APAGNANGAGEParser.STRING_LINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_assign_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(APAGNANGAGEParser.PRINT, 0)

        def STRING_ASSIGN(self):
            return self.getToken(APAGNANGAGEParser.STRING_ASSIGN, 0)

        def ID(self):
            return self.getToken(APAGNANGAGEParser.ID, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_print_assign_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_assign_string" ):
                listener.enterPrint_assign_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_assign_string" ):
                listener.exitPrint_assign_string(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_assign_string" ):
                return visitor.visitPrint_assign_string(self)
            else:
                return visitor.visitChildren(self)




    def print_assign_string(self):

        localctx = APAGNANGAGEParser.Print_assign_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print_assign_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(APAGNANGAGEParser.PRINT)
            self.state = 79
            self.match(APAGNANGAGEParser.STRING_ASSIGN)
            self.state = 80
            self.match(APAGNANGAGEParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_counterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP_COUNTER(self, i:int=None):
            if i is None:
                return self.getTokens(APAGNANGAGEParser.LOOP_COUNTER)
            else:
                return self.getToken(APAGNANGAGEParser.LOOP_COUNTER, i)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_loop_counter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_counter" ):
                listener.enterLoop_counter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_counter" ):
                listener.exitLoop_counter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_counter" ):
                return visitor.visitLoop_counter(self)
            else:
                return visitor.visitChildren(self)




    def loop_counter(self):

        localctx = APAGNANGAGEParser.Loop_counterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loop_counter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.match(APAGNANGAGEParser.LOOP_COUNTER)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self, i:int=None):
            if i is None:
                return self.getTokens(APAGNANGAGEParser.LOOP)
            else:
                return self.getToken(APAGNANGAGEParser.LOOP, i)

        def block(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.BlockContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(APAGNANGAGEParser.ID)
            else:
                return self.getToken(APAGNANGAGEParser.ID, i)

        def loop_counter(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.Loop_counterContext,0)


        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = APAGNANGAGEParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(APAGNANGAGEParser.LOOP)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 88
                self.match(APAGNANGAGEParser.ID)


            self.state = 91
            self.match(APAGNANGAGEParser.LOOP)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 92
                self.match(APAGNANGAGEParser.ID)
                pass
            elif token in [16]:
                self.state = 93
                self.loop_counter()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.ExpressionContext,i)


        def EQUALS(self):
            return self.getToken(APAGNANGAGEParser.EQUALS, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_logic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic" ):
                listener.enterLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic" ):
                listener.exitLogic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic" ):
                return visitor.visitLogic(self)
            else:
                return visitor.visitChildren(self)




    def logic(self):

        localctx = APAGNANGAGEParser.LogicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.expression()
            self.state = 99
            self.match(APAGNANGAGEParser.EQUALS)
            self.state = 100
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(APAGNANGAGEParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(APAGNANGAGEParser.BlockContext,0)


        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = APAGNANGAGEParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(APAGNANGAGEParser.IF)
            self.state = 103
            self.expression()
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK_START(self):
            return self.getToken(APAGNANGAGEParser.BLOCK_START, 0)

        def BLOCK_END(self):
            return self.getToken(APAGNANGAGEParser.BLOCK_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(APAGNANGAGEParser.StatementContext)
            else:
                return self.getTypedRuleContext(APAGNANGAGEParser.StatementContext,i)


        def BREAK(self):
            return self.getToken(APAGNANGAGEParser.BREAK, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = APAGNANGAGEParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(APAGNANGAGEParser.BLOCK_START)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 523502) != 0):
                    self.state = 107
                    self.statement()
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(APAGNANGAGEParser.BLOCK_END)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(APAGNANGAGEParser.BREAK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP_COUNTER(self):
            return self.getToken(APAGNANGAGEParser.LOOP_COUNTER, 0)

        def ID(self):
            return self.getToken(APAGNANGAGEParser.ID, 0)

        def getRuleIndex(self):
            return APAGNANGAGEParser.RULE_increment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrement" ):
                listener.enterIncrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrement" ):
                listener.exitIncrement(self)
